Deploy files via Zip Deployer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,23 @@ plugins {
 }
 
 android {
-    namespace 'com.example.salatwidget'
+    namespace 'com.example.ashashunisalat'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.salatwidget"
+        applicationId "com.example.ashashunisalat"
         minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.7'
     }
 
     buildTypes {
@@ -31,6 +39,7 @@ dependencies {
     implementation "androidx.compose.material3:material3:1.2.0"
     implementation "androidx.activity:activity-compose:1.8.2"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
     implementation "androidx.glance:glance-appwidget:1.0.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
