--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "AshashuniSalatTimes"
+rootProject.name = "AshashuniSalatApp"
 include(":app")
