--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,34 +1,37 @@
-name: Build APK
+name: Android CI
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: "17"
+          java-version: '17'
+          distribution: 'temurin'
 
-      - name: Gradle cache
-        uses: gradle/actions/setup-gradle@v3
+      - name: Fix gradlew line endings
+        run: |
+          sed -i 's/\r$//' gradlew
 
-      # If your repo has a Gradle wrapper, this will work directly.
-      # In Android Studio, create the wrapper via Gradle > Wrapper if missing.
-      - name: Build debug APK
-        run: ./gradlew :app:assembleDebug
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-      - name: Upload APK artifact
-        if: success()
-        uses: actions/upload-artifact@v4
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
         with:
-          name: Ashashuni-debug-apk
-          path: app/build/outputs/apk/debug/*.apk
+          name: AshashuniSalatApp-APK
+          path: app/build/outputs/apk/debug/app-debug.apk
