--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,17 @@
+# Project-wide Gradle settings.
+
+# JVM settings
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# Kotlin target
 kotlin.jvm.target=17
+kotlin.code.style=official
+
+# Enable AndroidX + Jetifier
+android.useAndroidX=true
+android.enableJetifier=true
+
+# Improve build performance
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.daemon=true
