--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=true
 
+kotlin.jvm.target=1.8
+
 # Improve build performance
 org.gradle.caching=true
 org.gradle.parallel=true
