--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,13 @@
 # JVM settings
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
-# Kotlin target
+# Kotlin target (must match Java)
 kotlin.jvm.target=17
 kotlin.code.style=official
 
 # Enable AndroidX + Jetifier
 android.useAndroidX=true
 android.enableJetifier=true
-
-kotlin.jvm.target=1.8
 
 # Improve build performance
 org.gradle.caching=true
