--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
-# Project-wide Gradle settings.
-
-# JVM settings
+# Project-wide Gradle settings
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
-# Kotlin target (must match Java)
-kotlin.jvm.target=17
+# Kotlin style
 kotlin.code.style=official
 
-# Enable AndroidX + Jetifier
+# AndroidX + Jetifier
 android.useAndroidX=true
 android.enableJetifier=true
 
-# Improve build performance
+# Performance
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.daemon=true
